Fix hero section div spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,15 +118,15 @@ h1, h2 {
 }
 */
 #cover-text {
-    font-size: 2rem;
+    font-size: 1.75rem;
     font-family: 'Raleway', sans-serif;
    /* text-transform: lowercase; */
     letter-spacing: 2px;
 
     /* sets dimensions of div container */
-    width: 50%;
+    width: 45%;
     height: 600px;
-    margin-top: 60px;
+    margin: 60px 30px 30px 30px;
     padding: 30px;
     float: right;
     box-sizing: border-box;
@@ -181,6 +181,7 @@ h1, h2 {
     width: 100%; 
     text-align: center;
     background-color: #A3BAB7;
+    padding: 0px 30px;
 }
 
 #left-about {
